--- a/style.css
+++ b/style.css
@@ -2,82 +2,87 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Poppins:wght@800&display=swap');
 
-@media (max-width: 576px) { 
-  body{
-    max-width: 100%;
-  } 
+@media screen and (max-width: 375px) { /*mobile*/
+	 html{
+	 	background-image: url("media/fond_mobile.png");
+	 	background-repeat: no-repeat;
+	    background-size: 100%;
+	    margin: 0;
+	    max-width: 375px;
+	    margin: auto;
+	    min-width: 375px;
+	  } 
+
+	 header, .compteur{
+	 	display: flex;
+		position: relative;
+		width:100%;
+	 }
+	 #countDown{
+	 	align-content: center;
+	 }
 }
 
-@media (max-width: 768px) { 
-   body{
-    max-width: 750px;
-   }
+@media screen and (max-width: 767px) { /*tablette*/
+	   body{
+	    max-width: 979px;
+	    min-width: 768px
+	   }
 }
 
-@media (max-width: 992px) {
-   body{
-    max-width: 800px;
-  }
+@media screen and (min-width: 1000) { /*desktop*/
+	   body{
+	    min-width: 1000px;
+	  }
+
+
 }
 
-@media (max-width: 1200px) {
-   body{
-    max-width: 800px;
-  }s
-}
 
 html{
 	background-image: url("media/fond_mobile.png");
-	background-repeat: repeat;
-    background-size: auto;
+	background-repeat: no-repeat;
+    background-size: 100%;
+    margin: 0;
+
 }
 
 header{
 	display: flex;
-	width:100%;
-	padding:20px;
 	position: absolute;
-	top: 8%;
-	left: 55%;
-	transform: translateX(-50%) translateY(-50%);
+	width:100%;
+	top: 2%;
+	left: 15%;
 }
 
-header > h1{
+/*titre du header*/
+.titre_appli{
 	color: #FFFFFF;
 	font-size: 17px;
 	font-weight: normal;
 	font-family: 'Poppins', sans-serif;
 	display: flex;
 	width:100%;
-	padding:auto;
-	position: relative;
-	top: 8%;
-	left: 75%;
-	transform: translateX(-35%) translateY(-50%);
 }
 
 /*logo du header*/
-header > .logo {
-	height: 33px;
-	top: 6%;
-	transform: translateX(1500%) translateY(-15%);
-	
-
+.logo {
+	height: 25px;
+	transform: translateX(-20%) translateY(30%);
+	max-width: 80%;
 }
 
 /*préparez vous*/
-body > h1 {
-	text-align: center;
+.compteur > h1 {
 	font-weight: normal;
 	color: #FFFFFF;
 	font-size: 24px;
 	font-family: 'Montserrat', sans-serif;
-	top: 25%;
-	position: absolute;
-	top: 15%;
-	left: 50%;
-	transform: translateX(-50%) translateY(-50%);
+
 	text-align: center;
+	position: absolute;
+	top: 20%;
+	left: 30%;
 }
 
 /*préparez vous*/
@@ -90,24 +95,26 @@ em {
 
 
 #countDown{
+	display: flex;
 	color: #FFFFFF;
-	font-size: 20px;
+	font-size: 25px;
 	font-family: 'Poppins', sans-serif;
-	position: absolute;
-	width: 177px;
-	height: 76px;
-	left: 42%;
-	top: 25%;
-	text-align: center;
 	background-color: #5495e0;
 	border: 1px solid #5495e0;
 	border-radius: 5px;
-	padding: 10px;
-	margin: auto;
+	position: absolute;
+	width: 177px;
+	height: 76px;
+	left: 30%;
+	top: 35%;
 }
 
 .numbers{
-	transform: translateX(-50%) translateY(50%);
+	display: flex;
+	position: relative;
+	left: 15%;
+	top:18%;
+
 }
 
 /*avant le passage*/
@@ -116,10 +123,9 @@ em {
 	font-size: 24px;
 	font-family: 'Poppins', sans-serif;
 	text-align: center;
-	margin: auto;
 	position: absolute;
 	width:97%;
-	top: 45%;
+	top: 55%;
 }
 
 .rappel{
@@ -130,11 +136,7 @@ em {
 	text-align: center;
 	width:87%;
 	padding:20px;
-	margin: auto;
 	display: flex;
-	position: absolute;
-	top: 70%;
-	
 }
 
 .rappel > p{
@@ -146,11 +148,7 @@ em {
 .bell{
 	width: 22px;
 	height: 22px;
-	transform: translateX(-1500%) translateY(10%);
 	display: flex;
-	padding:auto;
-	position: relative;
-
 }
 
 
@@ -203,9 +201,10 @@ footer{
 	width: 22px;
 	height: 22px;
 	display: flex;
-	padding:auto;
+	/*padding:auto;*/
 	position: relative;
 	transform: translateX(30%) translateY(30%);
+	max-width: 100%;
 
 }
 
@@ -216,14 +215,15 @@ footer{
 	width:100%;
 	padding-top:50px;
 	height:50px;
+	font-size: 5px;
 }
 
-/* unvisited link */
+/* unvisited copyright link */
 a:link {
   color: #000000;
 }
 
-/* visited link */
+/* visited copyright link */
 a:visited {
   color: #000000;
 }
