--- a/style.css
+++ b/style.css
@@ -4,23 +4,10 @@
 
 @media screen and (max-width: 375px) { /*mobile*/
 	 html{
-	 	background-image: url("media/fond_mobile.png");
-	 	background-repeat: no-repeat;
-	    background-size: 100%;
-	    margin: 0;
-	    max-width: 375px;
+	 	max-width: 375px;
 	    margin: auto;
-	    min-width: 375px;
+	    min-width: 300px;
 	  } 
-
-	 header, .compteur{
-	 	display: flex;
-		position: relative;
-		width:100%;
-	 }
-	 #countDown{
-	 	align-content: center;
-	 }
 }
 
 @media screen and (max-width: 767px) { /*tablette*/
@@ -28,6 +15,13 @@
 	    max-width: 979px;
 	    min-width: 768px
 	   }
+
+	   html{
+	   	background-image: url("media/fond_tablette.png");
+		background-repeat: no-repeat;
+	    background-size: 100%;
+	    margin: 0;
+		}
 }
 
 @media screen and (min-width: 1000) { /*desktop*/
@@ -35,13 +29,20 @@
 	    min-width: 1000px;
 	  }
 
+	  html{
+	   	background-image: url("media/fond_desktop.png");
+		background-repeat: no-repeat;
+	    background-size: 100%;
+	    margin: 0;
+		}
+
 
 }
 
 
 html{
 	background-image: url("media/fond_mobile.png");
-	background-repeat: no-repeat;
+	background-repeat: repeat;
     background-size: 100%;
     margin: 0;
 
@@ -103,6 +104,7 @@ em {
 	border: 1px solid #5495e0;
 	border-radius: 5px;
 	position: absolute;
+	align-content: center;
 	width: 177px;
 	height: 76px;
 	left: 30%;
