--- a/style.css
+++ b/style.css
@@ -40,192 +40,148 @@
 }
 
 
+
+
+
+
 html{
 	background-image: url("media/fond_mobile.png");
 	background-repeat: repeat;
     background-size: 100%;
     margin: 0;
+}
 
+body{
+	margin: 0;
 }
 
 header{
 	display: flex;
-	position: absolute;
-	width:100%;
-	top: 2%;
-	left: 15%;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: baseline;
+	align-content: center;
+	position: relative;
+	/*width:100%;*/
+	/*top: 2%;*/
+	/*left: 15%;*/
 }
 
-/*titre du header*/
-.titre_appli{
+header > h1 {
 	color: #FFFFFF;
 	font-size: 17px;
 	font-weight: normal;
 	font-family: 'Poppins', sans-serif;
-	display: flex;
-	width:100%;
+	/*display: flex;*/
+	/*width:100%;*/
 }
 
-/*logo du header*/
-.logo {
-	height: 25px;
-	transform: translateX(-20%) translateY(30%);
-	max-width: 80%;
+header > #logo {
+	height: 20px;
+	/*transform: translateX(-20%) translateY(30%);*/
+	/*max-width: 80%;*/
 }
 
 /*préparez vous*/
-.compteur > h1 {
+
+#compteur{
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	align-content: center;
+}
+
+#compteur > h1 {
 	font-weight: normal;
 	color: #FFFFFF;
 	font-size: 24px;
 	font-family: 'Montserrat', sans-serif;
 
-	text-align: center;
-	position: absolute;
-	top: 20%;
-	left: 30%;
+	/*text-align: center;*/
+	/*position: relative;*/
+	/*top: 20%;
+	left: 30%;*/
 }
 
-/*préparez vous*/
-em {
+#compteur > em {
 	font-family: 'Montserrat', sans-serif;
 	font-family: 'Poppins', sans-serif;
 	font-weight: 800;
 	font-style: normal;
 }
 
-
-#countDown{
-	display: flex;
+#compteur > table{
 	color: #FFFFFF;
 	font-size: 25px;
 	font-family: 'Poppins', sans-serif;
 	background-color: #5495e0;
 	border: 1px solid #5495e0;
 	border-radius: 5px;
-	position: absolute;
-	align-content: center;
 	width: 177px;
 	height: 76px;
-	left: 30%;
-	top: 35%;
-}
-
-.numbers{
-	display: flex;
-	position: relative;
-	left: 15%;
-	top:18%;
-
 }
 
 /*avant le passage*/
-.avant_titre{
+#avant_titre{
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	align-content: center;
+	text-align: center;
+
 	color: #FFFFFF;
 	font-size: 24px;
 	font-family: 'Poppins', sans-serif;
-	text-align: center;
-	position: absolute;
-	width:97%;
-	top: 55%;
 }
 
-.rappel{
+#rappel{
 	border: 1px solid #FFFFFF;
 	border-color: #FFFFFF;
 	border-radius: 6px;
 	color: #FFFFFF;
-	text-align: center;
-	width:87%;
-	padding:20px;
-	display: flex;
+	border-width: auto;
 }
 
-.rappel > p{
+#rappel > p{
 	font-size: 12px;	   
 	font-family: 'Poppins', sans-serif;
-	margin: auto;
 }
 
-.bell{
+#bell{
 	width: 22px;
 	height: 22px;
-	display: flex;
 }
-
 
 footer{
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: space-around;
-	align-items: auto;
-	position:absolute;
-	bottom:0;
-	width:100%;
-	padding-top:50px;
-	height:50px;
+	align-content: flex-end;
 }
 
 /*gauche du footer*/
-.gauche > p{
+#gauche > p{
 	color: #FFFFFF;
 	text-align: center;
 	font-size: 10px;
 	font-family: 'Poppins', sans-serif;
 }
-/*gauche du footer*/
-.gauche > a{
-	color: #000000;
-	text-align: center;
-	font-size: 6px;
-	font-style: italic;
-	font-family: 'Poppins', sans-serif;
-}
 
 /*droite du footer*/
-.droite{
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-}
-
-
-/*droite du footer*/
-.droite > p{
+#droite > p{
 	color: #FFFFFF;
+	text-align: center;
 	font-size: 10px;
 	font-family: 'Poppins', sans-serif;
-	
 }
-/*droite du footer*/
-.logo_github{
+
+#github{
 	width: 22px;
 	height: 22px;
-	display: flex;
-	/*padding:auto;*/
-	position: relative;
-	transform: translateX(30%) translateY(30%);
-	max-width: 100%;
-
 }
 
-/*icon alert copyright*/
-.copyright{
-	position:relative;
-	bottom:0;
-	width:100%;
-	padding-top:50px;
-	height:50px;
-	font-size: 5px;
-}
 
-/* unvisited copyright link */
-a:link {
-  color: #000000;
-}
-
-/* visited copyright link */
-a:visited {
-  color: #000000;
-}
