--- a/style.css
+++ b/style.css
@@ -2,15 +2,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Poppins:wght@800&display=swap');
 
-@media screen and (max-width: 375px) { /*mobile*/
-	 html{
+@media screen and (max-width: 375px) { //mobile
+	 html, body{
 	 	max-width: 375px;
-	    margin: auto;
-	    min-width: 300px;
+	    margin: 0;
 	  } 
 }
 
-@media screen and (max-width: 767px) { /*tablette*/
+/*@media screen and (max-width: 767px) { //tablette
 	   body{
 	    max-width: 979px;
 	    min-width: 768px
@@ -22,9 +21,9 @@
 	    background-size: 100%;
 	    margin: 0;
 		}
-}
+}*/
 
-@media screen and (min-width: 1000) { /*desktop*/
+@media screen and (min-width: 1000) { //desktop
 	   body{
 	    min-width: 1000px;
 	  }
@@ -49,10 +48,18 @@ html{
 	background-repeat: repeat;
     background-size: 100%;
     margin: 0;
+    height: 100%;
 }
 
 body{
 	margin: 0;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: space-between;
+	align-items: center;
+	align-content: stretch;
 }
 
 header{
