--- a/style.css
+++ b/style.css
@@ -2,15 +2,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Poppins:wght@800&display=swap');
 
-@media screen and (max-width: 375px) { //mobile
+@media screen and (max-width: 375px) { /*mobile*/
 	 html, body{
 	 	max-width: 375px;
 	    margin: 0;
 	  } 
 }
 
-/*@media screen and (max-width: 767px) { //tablette
-	   body{
+/*@media screen and (max-width: 767px) { /*tablette*/
+	   /*body{
 	    max-width: 979px;
 	    min-width: 768px
 	   }
@@ -23,7 +23,7 @@
 		}
 }*/
 
-@media screen and (min-width: 1000) { //desktop
+@media screen and (min-width: 1000) { /*desktop*/
 	   body{
 	    min-width: 1000px;
 	  }
@@ -54,6 +54,7 @@ html{
 body{
 	margin: 0;
 	height: 100%;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	flex-wrap: nowrap;
@@ -62,6 +63,7 @@ body{
 	align-content: stretch;
 }
 
+/*1ère box*/
 header{
 	display: flex;
 	flex-direction: row;
@@ -69,10 +71,6 @@ header{
 	justify-content: center;
 	align-items: baseline;
 	align-content: center;
-	position: relative;
-	/*width:100%;*/
-	/*top: 2%;*/
-	/*left: 15%;*/
 }
 
 header > h1 {
@@ -80,24 +78,19 @@ header > h1 {
 	font-size: 17px;
 	font-weight: normal;
 	font-family: 'Poppins', sans-serif;
-	/*display: flex;*/
-	/*width:100%;*/
 }
 
 header > #logo {
 	height: 20px;
-	/*transform: translateX(-20%) translateY(30%);*/
-	/*max-width: 80%;*/
 }
 
-/*préparez vous*/
-
+/*2ème box : préparez vous*/
 #compteur{
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
 	justify-content: space-around;
-	align-content: center;
+	align-items: center;
 }
 
 #compteur > h1 {
@@ -105,11 +98,6 @@ header > #logo {
 	color: #FFFFFF;
 	font-size: 24px;
 	font-family: 'Montserrat', sans-serif;
-
-	/*text-align: center;*/
-	/*position: relative;*/
-	/*top: 20%;
-	left: 30%;*/
 }
 
 #compteur > em {
@@ -119,7 +107,7 @@ header > #logo {
 	font-style: normal;
 }
 
-#compteur > table{
+table{
 	color: #FFFFFF;
 	font-size: 25px;
 	font-family: 'Poppins', sans-serif;
@@ -128,28 +116,37 @@ header > #logo {
 	border-radius: 5px;
 	width: 177px;
 	height: 76px;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	align-content: center;
 }
 
-/*avant le passage*/
+/*3ème box : avant le passage*/
 #avant_titre{
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
-	justify-content: space-around;
+	justify-content: space-between;
 	align-content: center;
+	align-items: center;
 	text-align: center;
 
 	color: #FFFFFF;
 	font-size: 24px;
 	font-family: 'Poppins', sans-serif;
 }
-
+/*mini box dans la 3ème box*/
 #rappel{
 	border: 1px solid #FFFFFF;
 	border-color: #FFFFFF;
 	border-radius: 6px;
 	color: #FFFFFF;
-	border-width: auto;
+	width: 95%;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
 }
 
 #rappel > p{
@@ -162,18 +159,18 @@ header > #logo {
 	height: 22px;
 }
 
+/*4ème box*/
 footer{
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	justify-content: space-around;
-	align-content: flex-end;
+	justify-content: space-between;
+	align-content: center;
 }
 
 /*gauche du footer*/
 #gauche > p{
 	color: #FFFFFF;
-	text-align: center;
 	font-size: 10px;
 	font-family: 'Poppins', sans-serif;
 }
@@ -181,7 +178,6 @@ footer{
 /*droite du footer*/
 #droite > p{
 	color: #FFFFFF;
-	text-align: center;
 	font-size: 10px;
 	font-family: 'Poppins', sans-serif;
 }
