--- a/style.css
+++ b/style.css
@@ -68,20 +68,19 @@ header{
 	display: flex;
 	flex-direction: row;
 	flex-wrap: nowrap;
-	justify-content: center;
+	justify-content: space-around;
 	align-items: baseline;
 	align-content: center;
-}
-
-header > h1 {
+	width: 100%;
 	color: #FFFFFF;
-	font-size: 17px;
+	font-size: 14px;
 	font-weight: normal;
 	font-family: 'Poppins', sans-serif;
 }
 
-header > #logo {
-	height: 20px;
+#logo {
+	height: 45px;
+	vertical-align: -12px;
 }
 
 /*2ème box : préparez vous*/
@@ -91,6 +90,8 @@ header > #logo {
 	flex-wrap: wrap;
 	justify-content: space-around;
 	align-items: center;
+	width: 100%;
+	height: 40%;
 }
 
 #compteur > h1 {
@@ -100,7 +101,7 @@ header > #logo {
 	font-family: 'Montserrat', sans-serif;
 }
 
-#compteur > em {
+em {
 	font-family: 'Montserrat', sans-serif;
 	font-family: 'Poppins', sans-serif;
 	font-weight: 800;
@@ -131,22 +132,23 @@ table{
 	justify-content: space-between;
 	align-content: center;
 	align-items: center;
-	text-align: center;
-
+	text-align: justify;
+	width: 85%;
+	height: 25%;
 	color: #FFFFFF;
-	font-size: 24px;
+	font-size: 19px;
 	font-family: 'Poppins', sans-serif;
 }
 /*mini box dans la 3ème box*/
 #rappel{
 	border: 1px solid #FFFFFF;
 	border-color: #FFFFFF;
-	border-radius: 6px;
+	border-radius: 5px;
 	color: #FFFFFF;
-	width: 95%;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
+	width: 110%;
 }
 
 #rappel > p{
@@ -157,6 +159,7 @@ table{
 #bell{
 	width: 22px;
 	height: 22px;
+	vertical-align: middle;
 }
 
 /*4ème box*/
@@ -164,8 +167,9 @@ footer{
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	justify-content: space-around;
 	align-content: center;
+	width: 95%;
 }
 
 /*gauche du footer*/
@@ -173,9 +177,18 @@ footer{
 	color: #FFFFFF;
 	font-size: 10px;
 	font-family: 'Poppins', sans-serif;
+	text-align: center;
+	flex:1;
 }
 
 /*droite du footer*/
+#droite{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	flex:2;
+}
+
 #droite > p{
 	color: #FFFFFF;
 	font-size: 10px;
@@ -185,6 +198,14 @@ footer{
 #github{
 	width: 22px;
 	height: 22px;
+	vertical-align: -12px;
+	flex:3;
+}
+
+a{
+	color: #5495e0;
+	font-size: 10px;
+	font-family: 'Poppins', sans-serif;
 }
 
 
