--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ footer{
 #droite{
 	display: flex;
 	flex-direction: row;
-	justify-content: center;
+	justify-content: space-around;
 	flex:2;
 }
 
@@ -202,13 +202,11 @@ footer{
 	color: #FFFFFF;
 	font-size: 10px;
 	font-family: 'Poppins', sans-serif;
-	text-align: center;
 }
 
 #github{
-	width: 22px;
-	height: 22px;
-	vertical-align: 25px;
+	width: 30px;
+	height: 30px;
 }
 
 
