--- a/style.css
+++ b/style.css
@@ -124,6 +124,14 @@ table{
 	align-content: center;
 }
 
+#days::after, #hours::after, #minutes::after{
+    content: ":";
+    letter-spacing: 1px;
+    font-size: 18px;
+    color: #FFFFFF;
+    margin-left:5px;
+}
+
 /*3ème box : avant le passage*/
 #avant_titre{
 	display: flex;
