--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 	} 
 }
 
-/*tablette*/
+/*tablette :on screens that are 992px or less, set the followings*/
 @media screen and (max-width: 834px) { 
 	body{
 	    max-width: 834px;
@@ -50,9 +50,9 @@
 
 
 
-/*desktop*/
-/*@media screen and (min-width: 834) { 
-	   /*body{
+/*desktop: on screens that are 834px or more, set the followings */
+@media screen and (min-width: 834) { 
+	   body{
 	    min-width: 834px;
 	  }
 
@@ -64,12 +64,12 @@
 		}
 
 
-}*/
+}
 
 
 
 
-
+/*********************************************/
 
 html{
 	background-image: url("media/fond_mobile.png");
