my github link color

--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ footer{
 }
 
 #marine{
-	color: #5495e0;
+	color: #FFFFFF;
 	font-size: 10px;
 	font-family: 'Poppins', sans-serif;
 	text-align: center;
