--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ footer{
 
 #marine{
 	color: #FFFFFF;
+	text-decoration: none;
 	font-size: 10px;
 	font-family: 'Poppins', sans-serif;
 	text-align: center;
